--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "codegen-contracts": "cd contracts && ${AZTEC_BUILDER:-aztec} codegen ./target -o ./target",
     "copy-artifacts": "cp contracts/target/*.json contracts/target/*.ts app/artifacts",
     "build-contracts": "yarn clean && yarn compile-contracts && yarn codegen-contracts && yarn copy-artifacts",
-    "deploy-contracts": "node --experimental-transform-types scripts/deploy.ts",
+    "deploy-contracts": "NODE_NO_WARNINGS=1 node --experimental-transform-types scripts/deploy.ts",
     "dev": "webpack serve --mode development",
     "build-app": "webpack --mode production",
     "build": "yarn build-contracts && yarn build-app",
