--- a/package.json
+++ b/package.json
@@ -39,14 +39,23 @@
     "crypto-browserify": "^3.12.1",
     "css-loader": "^6.10.0",
     "dotenv-webpack": "^8.0.1",
+    "events": "^3.3.0",
     "html-webpack-plugin": "^5.6.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prettier": "^3.5.3",
     "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
     "style-loader": "^3.3.4",
+    "timers-browserify": "^2.0.12",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
+    "url": "^0.11.4",
     "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
